Diff: Fix 'Jump to' dropdown, add more generator rules

--- a/github-dark.css
+++ b/github-dark.css
@@ -45,6 +45,31 @@
   .diffbar-range-menu .is-range-selected {
     background-color: #261d08 !important;
   }
+  /* auto-generated rule for "background-color: #f6f8fa" */
+  .Box-header, .Box-row.navigation-focus.sortable-ghost,
+  .Box-row--focus-gray.navigation-focus, .Box-row--hover-gray:hover,
+  .Box-row--gray, .menu-item:hover, .subnav-item:hover, .subnav-item:focus,
+  .bg-gray, .markdown-body table tr:nth-child(2n), .markdown-body .highlight pre,
+  .markdown-body pre, .table-list-header, .boxed-group>h3, .boxed-group .heading,
+  .commit-sha, .signed-commit-header,
+  .semantic-toc-symbol:not(.last-visible):after,
+  .select-menu-item+.semantic-toc-file:after, .copyable-terminal,
+  .timeline-comment-header, .facebox .facebox-staff-links,
+  .ajax-pagination-form .ajax-pagination-btn:hover,
+  .ajax-pagination-form .ajax-pagination-btn:focus,
+  .ajax-pagination-form.loading .ajax-pagination-btn, .protip code,
+  .render-notice, .select-menu-filters, .community-checklist .progress,
+  .layout-reorder-menu .dropdown-toggle:hover,
+  .layout-reorder-menu .dropdown-toggle.selected,
+  .layout-reorder-menu-list .is-hidden,
+  .layout-reorder-menu-list .is-hidden:hover,
+  .discussion-post .reply-comments-holder:before, .MarketplaceSideNav,
+  .ScreenshotCarousel-navitem.selected,
+  .profile-timeline.discussion-timeline .profile-timeline-month-heading:after,
+  .profile-timeline.discussion-timeline:before, .review-comment-contents:after,
+  .review-comment.is-comment-editing:after, .review-thread-reply {
+    background-color: #141414 !important;
+  }
   /* auto-generated rule for "border: 1px solid #e1e4e8" */
   .subnav-item, .blankslate, .table-list-header, .historical-banner,
   .list-group-item, .pagination a, .pagination span, .pagination em,
@@ -64,6 +89,20 @@
   .select-menu-modal, .RecentBranches, .github-jobs-promotion p,
   .project-updated-message, .shelf-dismiss .close-button {
     border-color: rgba(225, 225, 225, .2) !important;
+  }
+  /* auto-generated rule for "border-color: #e1e4e8" */
+  .semantic-toc-symbol:not(.last-visible):after,
+  .select-menu-item+.semantic-toc-file:after, .tabnav-pr,
+  .tabnav-pr .tabnav-tab.selected, .gollum-editor-help-parent li a:hover,
+  .gollum-editor-help-list li a:hover, .pagination a:hover, .pagination a:focus,
+  .pagination span:hover, .pagination span:focus, .pagination em:hover,
+  .pagination em:focus, .progress-bar-inline .progress-bar, .plans-card-btn,
+  .plans-card-btn {
+    border-color: #343434 !important;
+  }
+  /* auto-generated rule for "border-color: #dfe2e5" */
+  .select-menu-tabs a.selected, .select-menu-tabs .select-menu-tab-nav.selected {
+    border-color: #484848 !important;
   }
   /* auto-generated rule for "border-bottom: 1px solid #e1e4e8" */
   .Box-body, .menu-item, .menu-heading, .table-list, .boxed-group-list>li,
@@ -2002,7 +2041,8 @@
   .text-white, a.text-white, .blame-next-container .reblame-link:hover,
   .reblame-link:hover, .topic-tag-action .add-topic-button:hover,
   .topic-tag-action .remove-topic-button:hover,
-  .discussion-item-changes-marker.is-unread .discussion-item-icon {
+  .discussion-item-changes-marker.is-unread .discussion-item-icon,
+  .toc-select .navigation-focus * {
     color: #efefef !important;
   }
   .btn, a.btn, .btn.btn-primary, .button.primary, .minibutton.primary,
